--- a/client/login.html
+++ b/client/login.html
@@ -3,39 +3,48 @@
 
 <head>
     <title>Barebone Client to Test Login</title>
+    <script src="https://www.google.com/recaptcha/api.js?render=6LfhR3MrAAAAAHcg2F5C6pfSYwDElmzXgxBWqT5I"></script>
 </head>
 
 <body>
     <form id="myForm">
         <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" value="" required><br>
+        <input type="text" id="username" name="username" required><br>
         <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" value="" required><br><br>
+        <input type="email" id="email" name="email" required><br><br>
         <input type="submit" value="Log In">
     </form>
 
     <script>
         const form = document.getElementById('myForm');
 
-        form.addEventListener('submit', async function (e) {
-            e.preventDefault(); // Prevent default form submission
+        form.addEventListener('submit', function (e) {
+            e.preventDefault();
 
-            const data = {
-                username: form.username.value,
-                email: form.email.value,
-                captchaToken: "testdata"
-            };
+            grecaptcha.ready(function () {
+                grecaptcha.execute('6LfhR3MrAAAAAHcg2F5C6pfSYwDElmzXgxBWqT5I', { action: 'login' }).then(async function (token) {
+                    const data = {
+                        username: form.username.value,
+                        email: form.email.value,
+                        captchaToken: token
+                    };
 
-            const response = await fetch('http://localhost:3000/api/v1/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(data),
+                    try {
+                        const response = await fetch('http://localhost:3000/api/v1/login', {
+                            method: 'POST',
+                            headers: {
+                                'Content-Type': 'application/json',
+                            },
+                            body: JSON.stringify(data),
+                        });
+
+                        const result = await response.json();
+                        console.log(result);
+                    } catch (error) {
+                        console.error('Error:', error);
+                    }
+                });
             });
-
-            const result = await response.json();
-            console.log(result);
         });
     </script>
 
